minio and curl updates
